--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -20,7 +20,7 @@
 													'event-id': @event.id
 												},
 												class: 'md:hover:underline' do %>
-					<%= @event.details_name %>
+					<%= @event.name %>
 				<% end %>
 			</div>
 		</div>
