--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -59,7 +59,7 @@
 																	'event-id': event.id
 																},
 																class: 'md:hover:underline inline-block md:text-sm font-semibold mb-1 leading-snug text-gray-600' do %>
-									<%= event.details_name %>
+									<%= event.name %>
 								<% end %>
 							</div>
 							<div>
