--- a/web/app/components/hero/card_event_component.html.erb
+++ b/web/app/components/hero/card_event_component.html.erb
@@ -31,7 +31,7 @@
         <% end %>
       </div>
       <div>
-        <%= link_to helpers.limit_name_size(@event.details_name), event_path(@event), class: 'font-medium group-hover:text-brand-500 inline-block mt-1 text-base text-gray-800', data: {target: 'event.name'} %>
+        <%= link_to helpers.limit_name_size(@event.name), event_path(@event), class: 'font-medium group-hover:text-brand-500 inline-block mt-1 text-base text-gray-800', data: {target: 'event.name'} %>
         <span class=" inline-block leading-snug mt-1 text-gray-600 text-sm">
 				<%= "#{I18n.l(@event.start_time.to_date, format: :week).titlecase} #{helpers.format_hour @event.start_time} · #{helpers.time_until @event}" %>
           em <%= helpers.limit_place_name_size(@event.place_details_name, 20) %>
