--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -1,13 +1,13 @@
 <%= notice %>
 
-<% content_for :meta_title, "Evento #{@event.details_name.gsub(/[^[$][-]\p{L}\p{M}*+ ]|[+]/i, '')} em Porto Alegre | Alegreme.com" %>
-<% content_for :meta_description, strip_tags(limit_description_size(@event.details_description, 160)) %>
+<% content_for :meta_title, "Evento #{@event.name.gsub(/[^[$][-]\p{L}\p{M}*+ ]|[+]/i, '')} em Porto Alegre | Alegreme.com" %>
+<% content_for :meta_description, strip_tags(limit_description_size(@event.description, 160)) %>
 <% content_for :meta_image, @event.image[:original].try { |image| image.url(public: true) } %>
 <% content_for :canonical_url, event_url(@event, format: :html) %>
 <% content_for :amp_url, event_url(@event, format: :amp) %>
 
 <% content_for :back_button, true %>
-<% content_for :top_app_bar_title, truncate(@event.details_name, length: 30) %>
+<% content_for :top_app_bar_title, truncate(@event.name, length: 30) %>
 
 <%= content_for :preload_image, @event.image[:original].try { |image| image.url(public: true) } %>
 
@@ -63,13 +63,13 @@
 {
   "@context": "https://schema.org",
   "@type": "Event",
-  "name": "<%= @event.details_name.gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
+  "name": "<%= @event.name.gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
   "startDate": "<%= @event.ld_json.start_date %>",
   "endDate": "<%= @event.ld_json.end_date %>",
   "image": [
     "<%= @event.image[:original].try { |image| image.url(public: true) } %>"
    ],
-  "description": "<%= strip_tags(@event.details_description).gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
+  "description": "<%= strip_tags(@event.description).gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
   "url": "<%= event_path(@event, format: :html) %>",
   "location": {
     "@type": "Place",
@@ -124,14 +124,14 @@
 	<div class="md:col-span-4 md:mb-0 mt-5 md:mt-0 space-y-8">
 		<% if will_happen? @event %>
 			<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
-				<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
+				<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 					<div>Abrir no facebook</div>
 					<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
 					</svg>
 				</a>
-				<% if @event&.details_ticket_url %>
-					<a href="<%= @event.details_ticket_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
+				<% if @event&.ticket_url %>
+					<a href="<%= @event.ticket_url %>" target="_blank" rel="nofollow" class="select-none transition-colors bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 						<div>Comprar ingressos</div>
 						<svg class="fill-current group-hover:text-white h-6 text-gray-400 transition-colors" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M0 0h24v24H0V0z" fill="none"/>
@@ -141,8 +141,8 @@
 				<% end %>
 				<div class="select-none transition-colors overflow-hidden relative bg-white flex flex-1 group hover:bg-brand-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer"
 						 data-controller="share-button"
-						 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
-						 data-share-button-title="<%= @event.details_name %>"
+						 data-share-button-text="<%= strip_tags(limit_description_size(@event.description, 160)) %>"
+						 data-share-button-title="<%= @event.name %>"
 						 data-share-button-url="<%= event_url(@event, format: :html) %>"
 						 data-action="click->share-button#share">
 					<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
@@ -184,7 +184,7 @@
 																	'event-id': similar_event.id
 																},
 																class: 'md:hover:underline inline-block md:text-sm font-semibold mb-1 leading-snug text-gray-600' do %>
-									<%= similar_event.details_name %>
+									<%= similar_event.name %>
 								<% end %>
 							</div>
 							<div>
@@ -229,7 +229,7 @@
 	</div>
 
 	<div class="select-none tap-highlight-none fixed bottom-0 flex items-center w-screen px-3 py-2 space-x-2 text-sm font-medium text-gray-500 cursor-pointer md:hidden bg-gray-300">
-		<a href="<%= @event.details_source_url %>" target="_blank" rel="nofollow" class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
+		<a href="<%= @event.source_url %>" target="_blank" rel="nofollow" class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm">
 			<div>Abrir no facebook</div>
 			<svg class="h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<path d="M16 16H2V2H9V0H2C0.89 0 0 0.9 0 2V16C0 17.1 0.89 18 2 18H16C17.1 18 18 17.1 18 16V9H16V16ZM11 0V2H14.59L4.76 11.83L6.17 13.24L16 3.41V7H18V0H11Z"/>
@@ -237,8 +237,8 @@
 		</a>
 		<div class="select-none flex items-center justify-center flex-1 py-3 space-x-2 bg-white rounded shadow-sm"
 				 data-controller="share-button"
-				 data-share-button-text="<%= strip_tags(limit_description_size(@event.details_description, 160)) %>"
-				 data-share-button-title="<%= @event.details_name %>"
+				 data-share-button-text="<%= strip_tags(limit_description_size(@event.description, 160)) %>"
+				 data-share-button-title="<%= @event.name %>"
 				 data-share-button-url="<%= event_url(@event, format: :html) %>"
 				 data-action="click->share-button#share">
 			<input class="absolute opacity-0" style="bottom: -30px" data-share-button-target="input" type="text" value="<%= event_url(@event, format: :html) %>">
