--- a/web/app/views/layouts/classifier/_classifier.html.erb
+++ b/web/app/views/layouts/classifier/_classifier.html.erb
@@ -1,9 +1,9 @@
 <tr>
   <td><img src="<%= event.cover_url :feed %>" style="width: 130px"></td>
-  <td><a href="<%= event.url %>"> <%= limit_name_size event.details_name %> </a></td>
+  <td><a href="<%= event.url %>"> <%= limit_name_size event.name %> </a></td>
   <td><%= link_to event.place_details_name, train_path(place: event.place.slug) %></td>
   <td>
-    <%= limit_description_size event.details_description, 565 %> <br/>
+    <%= limit_description_size event.description, 565 %> <br/>
     <%#= event.ml_data.inspect %>
   </td>
   <td id="<%= dom_id event, 'chip_themes' %>">
