--- a/web/app/views/movies/_form.html.erb
+++ b/web/app/views/movies/_form.html.erb
@@ -51,7 +51,7 @@
 
     <div class="me-text-field__container me-text-field--fullwidth">
       <label class="mdc-text-field mdc-text-field--textarea">
-        <%= form.text_area :details_description, {class: 'mdc-text-field__input', 'aria-labelledby': 'my-label-id', rows: '6'} %>
+        <%= form.text_area :description, {class: 'mdc-text-field__input', 'aria-labelledby': 'my-label-id', rows: '6'} %>
         <span class="mdc-notched-outline">
           <span class="mdc-notched-outline__leading"></span>
           <span class="mdc-notched-outline__notch">
