Add banner to install app in feed when logout

--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -38,7 +38,7 @@
 				<%= @event.name %>
 			<% end %>
 			<div class="text-xs text-gray-500 mt-1">
-				<%= @event.categories_primary_name.titleize %> · <%= helpers.limit_place_name_size(@event.place_details_name, 24) %>
+				<%= @event&.categories_primary_name&.titleize %> · <%= helpers.limit_place_name_size(@event.place_details_name, 24) %>
 			</div>
 		</div>
 		<div>
