--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -68,7 +68,7 @@
 																											}) %>
 				</div>
 			<% else %>
-				<h2 class="mt-5 font-display text-gray-900 font-bold px-5 text-2xl md:text-3xl">
+				<h2 class="bg-white font-bold font-display px-5 text-gray-900 text-xl">
 					Não foram encontrados eventos em Porto
 					Alegre <%= I18n.l params[:day].to_date if params[:day] %> <%= "na categoria #{@category&.details_display_name&.titleize}" if params[:category] %>
 				</h2>
