--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -34,7 +34,7 @@
   						Descubra eventos e siga seus locais e artistas favoritos para não perder nada que acontece na cidade.
   					</span>
 					</div>
-					<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/skate.png", "hero/leitor-e-cao.png", "hero/passeando.png"].sample, class: 'h-32 md:h-44 md:w-auto my-auto w-32' %>
+					<%= image_pack_tag ["hero/bebendo.png", "hero/dancando.png", "hero/passeando.png"].sample, class: 'h-32 md:h-44 md:w-auto my-auto w-32' %>
 				</div>
 				<%= render Hero::SwipableComponent.new(user: current_user) %>
 			<% end %>
