--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -13,43 +13,49 @@
   [
     <%= render partial: 'layouts/json_ld', collection: @upcoming_events, as: :event %>
   ]
+
+
 	</script>
 
-	<div class="max-w-screen-lg grid grid-cols-12 mx-auto">
+	<div class="max-w-screen-lg gap-10 grid grid-cols-12 mx-auto">
 		<div class="col-span-12 md:col-span-4">
-			<div class="sticky top-24 mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-xl md:max-w-screen-sm sm:container">
-				<div class="px-8 py-3 mx-3 space-y-3 text-center bg-white rounded-md">
-					<%= image_tag shrine_image_url(@place, :sm), {
-						loading: :lazy,
-						class:   'w-12 h-12 max-w-xs mx-auto rounded-full shadow-sm',
-						onerror: "this.style.opacity='0'"
-					} if @place.image_data? %>
-					<div class="space-y-5">
-						<h1 class="flex-1 text-2xl font-bold font-display leading-tight text-gray-600 group-hover:text-brand-500 md:pl-0 md:text-4xl">
-							<%= @place.details_name %>
-						</h1>
-						<div class="leading-tight">
-							<%= @place.geographic_address %>
+			<div class="sticky top-24 mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-xl md:shadow-lg md:max-w-screen-sm sm:container">
+				<div class="p-6 space-y-5 bg-white rounded-md">
+					<div class="flex space-x-5 items-center">
+						<%= image_tag shrine_image_url(@place, :sm), {
+							loading: :lazy,
+							class:   'w-12 h-12 max-w-xs mx-auto rounded-full shadow-sm border border-gray-100',
+							onerror: "this.style.opacity='0'"
+						} if @place.image_data? %>
+						<div class="flex-grow">
+							<h1 class="flex-1 font-bold font-display leading-tight text-gray-900 group-hover:text-brand-500 md:pl-0">
+								<%= @place.details_name %>
+							</h1>
+							<%= render(FollowButtonComponent.new(
+								user:       current_user,
+								followable: @place
+							)) %>
 						</div>
-						<div class="">
-							<%= @upcoming_events.size %> eventos ativos
+					</div>
+					<div class="space-y-5 mt-10">
+						<div class="leading-tight text-xs">
+							<b>Endereço: </b><%= @place.geographic_address&.titleize %>
 						</div>
-						<%= render(FollowButtonComponent.new(
-							user:       current_user,
-							followable: @place
-						)) %>
+						<!--						<div class="">-->
+						<!--							<%#= @upcoming_events.size %> eventos ativos-->
+						<!--						</div>-->
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="col-span-12 md:col-span-8 space-y-10">
-			<div class="mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-xl md:max-w-screen-sm sm:container">
-				<h2 class="font-bold font-display pb-2 pt-8 px-5 text-3xl">Próximos eventos</h2>
+		<div class="col-span-12 md:col-span-8 space-y-10 pt-5">
+			<div class="mx-auto space-y-3 overflow-hidden is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
+				<h2 class="font-bold font-display pb-2 px-5 text-gray-900 text-xl">Próximos eventos</h2>
 				<%= render MainSidebar::GroupByDayListComponent.new events: @upcoming_events, user: current_user %>
 			</div>
 
-			<div class="mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-xl md:max-w-screen-sm sm:container">
-				<h2 class="font-bold font-display pb-2 pt-8 px-5 text-3xl">Eventos passados</h2>
+			<div class="mx-auto space-y-3 overflow-hidden is-animated md:rounded-2xl md:max-w-screen-sm sm:container">
+				<h2 class="font-bold font-display pb-2 px-5 text-gray-900 text-xl">Eventos passados</h2>
 				<div class="opacity-75 grid grid-cols-12">
 					<% @past_events.each do |event| %>
 						<div class="col-span-12 md:col-span-6 flex justify-between px-5 py-3 md:border-0">
